# AutoDrivingCompetition

./: .gitignore  .gitmodules  README.md
src/: .gitignore  CMakeLists.txt  README.md  Readme.md  package.xml
src/aichallenge-bringup-final/: CMakeLists.txt  README.md  create-tar-file.sh
src/aichallenge-bringup-final/data/: Lexus.yaml  aichallenge.rviz  lanelet2_fixed.osm  lexus.json  localizer.yaml  saved_waypoints.csv  simulator.pcd
src/aichallenge-bringup-final/launch/: _imm_ukf_pda_track_lanelet2.launch  _lidar_euclidean_cluster_detect.launch  _lidar_points_pillar.launch  _naive_motion_predict.launch  _ndt_matching.launch  _points_concat_filter.launch  _range_vision_fusion.launch  _vision_yolo3_detect.launch  _visualizer.launch  aichallenge_bringup.launch  debug.launch  intersection1.launch  intersection2.launch  nopp.launch  rviz.launch  seiri.launch  user_nodes.launch
src/aichallenge-bringup-final/scenario/: crossroad.py  intersection1.py  intersection2.py  scenario.train.py  stasrt_point_left.py
src/aichallenge-bringup-final/scripts/: brake.py  brake_int..py  calibrate.py  debug.py  initial_pose_publisher.py  initial_pose_publisher_intersection1.py  initial_pose_publisher_intersection2.py
src/data/: aichallenge.rviz  lexus.json  simulator.pcd
src/fast_pure_pursuit/: CMakeLists.txt  package.xml
src/fast_pure_pursuit/include/pure_pursuit/: pure_pursuit_core.h
src/fast_pure_pursuit/launch/: fast_pure_pursuit.launch
src/fast_pure_pursuit/src/: pure_pursuit_core.cpp
src/lane_stopper/: CMakeLists.txt  README.md  package.xml
src/lane_stopper/include/: lane_stopper.h
src/lane_stopper/launch/: lane_stopper.launch
src/lane_stopper/nodes/: lane_stopper.cpp
src/lane_stopper/scripts/: bakusou.py  brake.py
src/launch/: user_nodes.launch
src/my_lidar_imm_ukf_pda_track/: CMakeLists.txt  package.xml
src/my_lidar_imm_ukf_pda_track/launch/: imm_ukf_pda_track_lanelet2.launch
src/my_lidar_imm_ukf_pda_track/nodes/imm_ukf_pda/: imm_ukf_pda.cpp
src/my_lidar_imm_ukf_pda_track/nodes/imm_ukf_pda_lanelet2/: imm_ukf_pda_lanelet2.cpp
src/mynaive_motion_predict/: CMakeLists.txt  package.xml
src/mynaive_motion_predict/nodes/naive_motion_predict/: naive_motion_predict.cpp
src/mypoints_down_sampler/: CMakeLists.txt  package.xml
src/mypoints_down_sampler/launch/: points_downsample.launch
src/mypoints_down_sampler/msg/: ConfigVoxelGridDistanceFilter.msg
src/mypoints_down_sampler/nodes/voxel_grid_filter/: voxel_grid_filter.cpp
src/pcl_in_bbox/: CMakeLists.txt  README.md  package.xml
src/pcl_in_bbox/include/detection_concat/: detection_concat.h
src/pcl_in_bbox/include/pcl_in_bbox/: pcl_in_bbox.h
src/pcl_in_bbox/launch/: detection_concat.launch  pcl_in_bbox.launch
src/pcl_in_bbox/src/: detection_concat.cpp  pcl_in_bbox.cpp  pcl_in_bbox_node.cpp
src/points_densifier/: CMakeLists.txt  interface.yaml  package.xml
src/points_densifier/include/: points_densifier.h
src/points_densifier/launch/: points_densifier.launch
src/points_densifier/src/: points_densifier.cpp
src/scripts/: initial_pose_publisher.py
src/vehicle_odm_controller/: CMakeLists.txt  package.xml
src/vehicle_odm_controller/include/vehicle_odm_controller/: vehicle_state.hpp
src/vehicle_odm_controller/src/: vehicle_state.cpp  vehicle_state_node.cpp
src/vehicle_state_publisher/: CMakeLists.txt  package.xml
src/vehicle_state_publisher/include/vehicle_state_publisher/: vehicle_state.hpp
src/vehicle_state_publisher/src/: vehicle_state.cpp  vehicle_state_node.cpp
