<?xml version="1.0"?>
<package format="2">
  <name>lane_stopper</name>
  <version>1.12.0</version>
  <description>The lane_stopper package</description>
  <maintainer email="izumikarino@gmail.com">iZuno-K</maintainer>
  <author email="izumikarino@gmail.com">iZuno-K</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>
  <depend>autoware_config_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
</package>
