<?xml version="1.0"?>
<package format="2">
  <name>pcl_in_bbox</name>
  <version>1.12.0</version>
  <description>Point Cloud in Bounding Boxnode</description>
  <maintainer email="izumikarino@gmail.com">Izumi Karino</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
