<?xml version="1.0"?>
<package format="2">
  <name>points_densifier</name>
  <version>1.12.0</version>
  <description>The points_densifier package</description>
  <maintainer email="izumikarino@gmail.com">iZuno-K</maintainer>
  <author email="izumikarino@gmail.com">iZuno-K</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>
  <depend>autoware_config_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>cv_bridge</depend>
  <depend>gtest</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>qtbase5-dev</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>yaml-cpp</depend>
</package>
